added new tmux management

--- a/devices/Mode_Change/Phase_II/Mode_Change.ini
+++ b/devices/Mode_Change/Phase_II/Mode_Change.ini
@@ -11,11 +11,10 @@
 debug_log:  /nfiudata/LOGS/Mode_Change.log
 
 [Environment]
-# Command to start control script
-# to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s Mode_Change|tmux send-keys -t Mode_Change "Mode_Change_Control" Enter
-# Command to end control script
-end_command:   tmux kill-ses -t Mode_Change
+# info about tmux sessions for processes to live in
+session: Devices
+window:  Mode_Change
+ctrl_s:  Mode_Change_Control
 
 [Presets]
 Focal: .27
