changed Vis_proc to use paths for ref, bkgrd

--- a/processing/TC_Track/Track_Cam_tracking_process.ini
+++ b/processing/TC_Track/Track_Cam_tracking_process.ini
@@ -27,12 +27,9 @@ Avg_cnt: /tmp/Track_Process/AVG.shm,uint8,0
 #       2      : median filter           (1 = on, 0 = off)
 Stat:     /tmp/Track_Process/STAT.shm,uint8,0
 
-# Shared memory to store the reference image 
+# Shared memory to store a pointer to the calibration image 
 #   to be subtracted (subtraction determined by Stat)
-#
-#   NOTE: first pixel should be 0 if this is a raw frame,
-#       anything else if it includes a bias
-Calib:     /tmp/Track_Process/CAL.shm,int16,0
+Calib:     /tmp/Track_Process/CAL.shm,U,0
 
 # Shared memory for the processed image
 Track_proc:    /tmp/Track_Process/PROC.im.shm,int16,1
