--- a/processing/TC_Vis/Track_Cam_vis_process.ini
+++ b/processing/TC_Vis/Track_Cam_vis_process.ini
@@ -39,7 +39,7 @@ Avg_cnt: /tmp/Vis_Process/PROCAVG.shm,uint8,0
 #       bit 4 is ignored if bit 1 is 1 and calib is being
 #           used by track processing script
 #       if more than one of bits 3, 4, 5 are 1, only the largest
-#           bit is repected
+#           bit is respected
 #
 # Values are as follows:
 #   bit 0 (LSB): process status             (1 = processing, 0 = not)
@@ -50,17 +50,20 @@ Avg_cnt: /tmp/Vis_Process/PROCAVG.shm,uint8,0
 #       5      : reference subtraction      (1 = subtracting, 0 = not)
 Stat:     /tmp/Vis_Process/PROCSTAT.shm,uint8,0
 
-# Shared memory to store the reference image 
+# Shared memory to store a pointer to the reference image 
 #   to be subtracted (subtraction determined by Stat)
 #
-#   NOTE: should be a raw frame
-Ref:     /tmp/Vis_Process/PROCREF.shm,int16,0
+# NOTE: the first frame will be taken as the image to be
+#   subtracted
+Ref:     /tmp/Vis_Process/PROCREF.shm,U,0
 
-# Shared memory to store the current background image
-#   to be subtracted (subtraction determined by Stat)
+# Shared memory to store a pointer to the current background 
+#   image to be subtracted (subtraction determined by Stat)
 #
-#   NOTE: background should be a raw frame
-Bkgrd:   /tmp/Vis_Process/PROCBKGRD.shm,int16,0
+# NOTE: the first frame will be taken as the image to be
+#   subtracted
+# NOTE: image should be a raw image
+Bkgrd:   /tmp/Vis_Process/PROCBKGRD.shm,U,0
 
 # Shared memory for the processed image
 Proc:    /tmp/Vis_Process/PROCIMG.im.shm,int16,1
@@ -68,7 +71,29 @@ Proc:    /tmp/Vis_Process/PROCIMG.im.shm,int16,1
 # Shared memory to store any errors
 #
 # Error values are as follows:
+#   0 = None // 1 = Tracking Camera not connected //
+#   2 = Track processing off // 3 = Reference image does not
+#   exist // 4 = 
 #   0 = None // 1 = Bias Error // 2 = Background shape wrong
 #   3 = Reference shape wrong // 4 = Track processing error
 #   5 = bad pixel map error // 6 = camera not connected
 Error:   /tmp/Vis_Process/PROCERR.shm,uint8,0
+
+[Error Messages]
+# info on what different errors mean
+#   errors preceded by (Warning) will not stop processing
+0: No error
+1:  Tracking Camera not connected.
+2:  Tracking processing off.
+3:  Image to be subtracted does not exist.
+4:  Image to be subtracted has improper header.
+5:  (Warning) Background image not raw, no bad pixel map will be calculated from it.
+6:  (Warning) Bias image not raw, no bad pixel map will be calculated.
+7:  Image to be subtracted has incompatible cropping.
+8:  (Warning) Image to be subtracted has wrong camera parameters.
+9:  (Warning) No Bias for current camera parameters.
+10: (Warning) No valid bad pixel map available.
+11: (Warning) Bad pixel map calculated from image with wrong camera settings. Please take new background.
+12: (Warning) Bad pixel map calculated form image with improper header. Please take new background.
+13: (Warning) Error subtracting frame
+14: (Warning) Error multiplying bad pixel map
